# community-discussions

./: LICENSE  README.md
discussions-api/: .gitignore  .pylintrc  Makefile  Pipfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  run.py  settings.toml
discussions-api/.github/workflows/: ci.yml
discussions-api/api/router/: comment.py  topic.py
discussions-api/api/v1/: comment.py  topic.py
discussions-api/app/: main.py
discussions-api/app/api/: deps.py
discussions-api/app/api/v1/: comment.py  router.py  topic.py
discussions-api/app/discussion/domain/: comment.py  topic.py
discussions-api/app/discussion/repository/: base.py  comment.py  topic.py
discussions-api/app/discussion/usecase/: comment.py  topic.py
discussions-api/app/domain/: comment.py  topic.py
discussions-api/app/repository/: base.py  comment.py  topic.py
discussions-api/app/usecase/: comment.py  topic.py
discussions-api/discussion/domain/: comment.py  topic.py
discussions-api/discussion/model/: comment.py  topic.py
discussions-api/discussion/repository/: base.py  comment.py  topic.py
discussions-api/discussion/router/: comment.py  topic.py
discussions-api/discussion/usecase/: comment.py  topic.py
discussions-api/discussions/: models.py  routers.py
discussions-api/scripts/: format-imports.sh  format.sh  lint.sh  test.sh
discussions-api/tests/: conftest.py
discussions-api/tests/api/v1/: test_comment.py  test_topic.py
discussions-api/tests/discussion/domain/: test_topic.py
discussions-api/tests/domain/: test_comment.py  test_topic.py
(+2 files in other folders)
