 
[tool.poetry]
name = "Community Discussions API"
version = "0.1.0"
description = "Comments forum and topics about everything."
authors = ["Matheus Bosa <matheusbozza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
motor = "^2.5.0"
dnspython = "^2.1.0"
dynaconf = "^3.1.4"
requests = "^2.23.0"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
autoflake = "^1.3.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
